# pantry_nytva_bot

./: main.py  main_routers.py  message_engine.py  pantry_59_bot.drawio  pyproject.toml  Диаграмма без названия.drawio  Рисуем колбеки.drawio
admin_panel/: admin_panel.py  excel_parser.py
admin_panel/data_classes/: phones_data.py
bot_requests/: __init__.py  reqs.py
bot_text/: text_data.py
callback_factory/: admin_callback.py  catalog_callbacks.py
config/: bot_config.py  db_config.py  log_config.py
excel_files/: Excel-файл шаблон.xlsx  Обновленный Excel-файл.xlsx
fsm/: base_fsm_data.py  fsm_offering_product.py
handlers/: start_handlers.py
handlers/admin_panel/: __init__.py  add_product_photo.py  download_excel_file.py  main_admin_panel.py  upload_any_files.py  upload_excel_file.py
handlers/base_functions/: __init__.py  base_functions_engine.py  base_handlers.py  utils.py
handlers/catalog/: __init__.py  catalog_display.py  catalog_handlers.py  catalog_utils.py
handlers/offering_product/: __init__.py  handlers.py  offer_reqs.py  offering_product_basis.py
handlers/order_product/: __init__.py  handlers.py  order_product_basis.py  order_text.py
handlers/product_display/: __init__.py  open_product.py  photo_helper.py  product_page.py  product_utils.py
handlers/sell_product/: __init__.py  handlers.py  (+2 more)
keyboards/: __init__.py  catalog_kb.py  main_keyboard.py  menu.py
middlewares/: __init__.py  base_functions.py  catalog_display.py  excel_parser.py  message_engine.py  offer.py  sql_engine.py
migration/: env.py
sql/: __init__.py  sql_engine.py
(+55 files in other folders)
