[tool.poetry]
name = "pantry-nytva-bot"
version = "0.1.0"
description = "mini-shop"
authors = ["Yury Petrov <gderpov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.3.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.25"}
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
